--- a/public/en/contact.html
+++ b/public/en/contact.html
@@ -119,9 +119,9 @@
         <script src="../js/cookie.js"></script>
         <script>
             function onSubmit(token) {            
-                var applicationForm = document.getElementById("contact-form");    
+                var applicationForm = document.getElementById("contact");    
                 if (applicationForm.checkValidity()) {
-                    document.getElementById("contact-form").submit();                
+                    document.getElementById("contact").submit();                
                 } else {
                   applicationForm.reportValidity();
                 }
