--- a/public/en/projets.html
+++ b/public/en/projets.html
@@ -29,7 +29,7 @@
     <body>
         <header class="header" id="myHeader">
             <div class="logo-area">
-                <a href="index.html" class="logo">
+                <a href="/" class="logo">
                     <img class="logo-large" width="225px" height="55px" src="../img/logo/facebook_cover_photo_1.png" alt="logo">
                     <img class="logo-mobile" width="55px" height="55px" src="../img/logo/logo-only.png" alt="logo">
                 </a>
@@ -130,7 +130,7 @@
                 <a href="https://www.linkedin.com/in/rapha%C3%ABl-durand-386720267/" target="_blank">LinkedIn</a>
             </div>
             <div class="adress-area">
-                <a href="index.html" class="adress">www.raphael-durand.fr</a>
+                <a href="/" class="adress">www.raphael-durand.fr</a>
             </div>
             <div class="help-area">
                 <a href="help.html" class="help">
