Ajout d'un lien github

--- a/public/project/sound.html
+++ b/public/project/sound.html
@@ -109,6 +109,7 @@
             <div class="links">
                 <a href="../informations.html">A propos</a>
                 <a href="https://www.linkedin.com/in/rapha%C3%ABl-durand-386720267/" target="_blank">LinkedIn</a>
+                <a href="https://github.com/IacceptCookie" target="_blank">Github</a>
             </div>
             <div class="adress-area">
                 <a href="../" class="adress">www.raphael-durand.fr</a>
