--- a/public/help.html
+++ b/public/help.html
@@ -78,7 +78,7 @@
                 </button>
                 <div class="answer">
                     <p class="answer-content">
-                        Toutes les informations concernant mon profil professionnelles sont dans la page <a href="profil.html" class="more-profil">Profil</a>. <br>
+                        Toutes les informations concernant mon profil professionnel sont dans la page <a href="profil.html" class="more-profil">Profil</a>. <br>
                         Vous y retrouverez entre autres mon CV ainsi que mon cursus.
                     </p>
                 </div>
@@ -101,7 +101,7 @@
                     </p>
                 </div>
                 <button class="question">
-                    Comment est-ce que je peux te contacter ?
+                    Comment vous/te contacter ?
                     <i class="fa fa-chevron-down"></i>
                 </button>
                 <div class="answer">
@@ -147,6 +147,7 @@
             <div class="links">
                 <a href="informations.html">A propos</a>
                 <a href="https://www.linkedin.com/in/rapha%C3%ABl-durand-386720267/" target="_blank">LinkedIn</a>
+                <a href="https://github.com/IacceptCookie" target="_blank">Github</a>
             </div>
             <div class="adress-area">
                 <a href="/" class="adress">www.raphael-durand.fr</a>
