--- a/public/en/index.html
+++ b/public/en/index.html
@@ -72,8 +72,8 @@
             <div class="presentation">
                 <div class="presentation-info">
                     <p>
-                        My name is Raphaël DURAND. 
-                        I am a student in computer science at the University Institute of Technology (IUT) of Reims Champagne-Ardenne. 
+                        My name is Raphaël.
+                        I am a student in computer science at the University Institute of Technology (IUT) of Reims Châlons Charleville. 
                         I developed this website to show my current and future projects, 
                         and to promote my professional profile.
                     </p>
