--- a/public/en/profil.html
+++ b/public/en/profil.html
@@ -75,8 +75,8 @@
                 </div>
                 <div class="presentation-info">
                     <p>
-                        My name is Raphaël DURAND. 
-                        I am a student in computer science at the University Institute of Technology (IUT) of Reims Champagne-Ardenne. 
+                        My name is Raphaël.
+                        I am a student in computer science at the University Institute of Technology (IUT) of Reims Châlons Charleville. 
                         I developed this website to show my current and future projects, 
                         and to promote my professional profile.
                     </p>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="experience-right">
                     <p class="experience-info">
-                        I'm currently a student at the Reims Champagne-Ardenne IUT.<br>
+                        I'm currently a student at the Reims Châlons Charleville IUT.<br>
                         <br>
                         During my first year at the IUT, I've already learned a lot from my teachers. 
                         Today, I'm in my 2nd year of the BUT (my computer science Bachelor's degree), with the DATA specialization.<br>
@@ -176,7 +176,7 @@
             </div>
             <div class="downloadable">
                 <h1 class="downloadable-title">Curriculum Vitae (CV)</h1>
-                <img src="../downloadable/cv-site-en.jpg" alt="preview of my cv" width="800px" height="1000px" class="downloadable-picture">
+                <img src="../downloadable/cv-site-en.png" alt="preview of my cv" width="800px" height="1000px" class="downloadable-picture">
                 <a href="../downloadable/cv-site-en.pdf" class="download" download="cv-rdurand-en" target="_blank">Download my CV</a>
             </div>
         </main>
