--- a/public/index.html
+++ b/public/index.html
@@ -73,8 +73,8 @@
             <div class="presentation">
                 <div class="presentation-info">
                     <p>
-                        Je m’appelle Raphaël DURAND, 
-                        je suis étudiant en informatique à l'IUT de Reims Champagne-Ardenne. 
+                        Je m’appelle Raphaël, 
+                        je suis étudiant en informatique à l'IUT de Reims Châlons Charleville. 
                         J’ai développé ce site internet pour mettre en valeur mes différents projets en cours et futurs, 
                         ainsi que promouvoir mon profil professionnel.
                     </p>
