--- a/public/profil.html
+++ b/public/profil.html
@@ -76,8 +76,8 @@
                 </div>
                 <div class="presentation-info">
                     <p>
-                        Je m’appelle Raphaël DURAND, 
-                        je suis étudiant en informatique à l'IUT de Reims Champagne-Ardenne. 
+                        Je m’appelle Raphaël, 
+                        je suis étudiant en informatique à l'IUT de Reims Châlons Charleville. 
                         J’ai développé ce site internet pour mettre en valeur mes différents projets en cours et futurs, 
                         ainsi que promouvoir mon profil professionnel.
                     </p>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="experience-right">
                     <p class="experience-info">
-                        Je suis actuellement étudiant à l'IUT de Reims Champagne-Ardenne.<br>
+                        Je suis actuellement étudiant à l'IUT de Reims Châlons Charleville.<br>
                         <br>
                         Au cours de cette première année en IUT, j'ai déjà beaucoup appris auprès de mes professeurs.
                         Aujourd'hui, je suis en 2e année de BUT (Bachelor Universitaire et Technologique) informatique parcours DATA.<br>
@@ -175,7 +175,7 @@
             </div>
             <div class="downloadable">
                 <h1 class="downloadable-title">Curriculum Vitae (CV)</h1>
-                <img src="downloadable/cv-site.jpg" alt="Aperçu de mon cv" width="800px" height="1000px" class="downloadable-picture">
+                <img src="downloadable/cv-site.png" alt="Aperçu de mon cv" width="800px" height="1000px" class="downloadable-picture">
                 <a href="downloadable/cv-site.pdf" class="download" download="cv-rdurand" target="_blank">Télécharger mon CV</a>
             </div>
         </main>
